[master] Saving whole config
